--- a/src/index.ejs
+++ b/src/index.ejs
@@ -10,7 +10,7 @@
       </script>
     <% } %>
   </head>
-  <body>
+  <body style="height: 100vh; background-color: #f8fafc;">
     <div id="app"></div>
     <!-- Set `__static` path to static files in production -->
     <script>
